# libtorch-inference

./: .gitignore  CMakeLists.txt  README.md  inference.cpp
